XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Completely refactored the peer.http API to be able to nicely 
  implement RFC #0162.
  (friebe)

RFCs
~~~~
- Implemented RFC #0162: HTTP proxy
  (friebe)

Bugfixes
~~~~~~~~
- Made lang.ClassLoader::loadClass() raise a ClassFormatException in
  case the included file does not declare the class.
  (friebe)

Features
~~~~~~~~
- Added lang.reflect.Field::set() method
  (friebe)
- Made peer.Socket instances cloneable
  (friebe)
- Made peer.URL constructor parameter optional
  (friebe)
- Extended util.MimeType class to include types for various programming
  languages.
  (friebe)
- Added 503 error page to scriptlet SAPI
  (friebe)
- Added pushBack() method to text.Tokenizer class and its implementations
  (friebe)


Version 5.6.7, released 2008-06-09
----------------------------------
SVN version: 12285

Heads up!
~~~~~~~~~
- Deprecated xml.XML class
  (friebe)

RFCs
~~~~
- Implemented RFC #0166: XP Runners
  (friebe)
- Implemented RFC #0165: New text.regex package
  (friebe)
- Implemented RFC #0163: Respect ANSI SQL in rdbms package
  (kiesel)
- Implemented RFC #0157: Make product, language and session optional 
  URL parts
  (kiesel)
  
Bugfixes
~~~~~~~~
- Fixed FtpConnection::getDir() function by passing FTP connection object
  to FtpDir constructor
  (hinckel)
- Fixed _recurseData() in XPSoapMessage to handle arrays vs. objects
  correctly
  (hinckel)
- Made HttpScriptlet::process() rethrow HttpScriptletExceptions as-is,
  while any other exception is wrapped into a HttpScriptletException.
  (friebe).
- Fixed bug when scriptlet.xml.workflow.casters.ToDate accepted an
  abbreviated date, interpreted it as a time and used the
  current date with given time instead the given date
  (kiesel)
- Fixed session id initialization in XMLScriptletRequest::initialize()